hard-gists/1352028/run.log
=== Docker Run Log for 1352028 ===
Started at: Mi 29. Okt 12:08:58 CET 2025

[2025-10-29 12:08:59] START: Running container for 1352028
[2025-10-29 12:08:59] SUCCESS: Container ec89723bd40d4f943f0da2af5c5b3b4418beb8aceb4363ae4135375ba59f1cd4 started for 1352028
=== Container logs for 1352028 ===
  File "/snippet.py", line 15
    print datetime.now()
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1352028 ===
[2025-10-29 12:09:01] INFO: Container ec89723bd40d4f943f0da2af5c5b3b4418beb8aceb4363ae4135375ba59f1cd4 has stopped
